# actix-web-magic-link-auth

./: .env  .travis.yml  Cargo.toml  Procfile  README.md  approve.sh
src/: main.rs
static/: challenge.html  home.html  login.html
